--- a/commerce/templates/commerce/layout.html
+++ b/commerce/templates/commerce/layout.html
@@ -75,8 +75,11 @@
             </li>        
           </ul>
           <div class="form-inline my-2 my-lg-0">
-            <a href="#"class="btn btn-warning">Login</a>
-            
+            {% if status %}
+            <a href="{% url 'logout'%}" class="btn btn-warning">Log Out</a>
+            {% else %}
+            <a href="{% url 'login'%}" class="btn btn-warning">Log In</a>
+            {% endif %}            
             <a href="{% url 'cart' %}">
             <img id="cart-icon" src="{% static 'commerce/images/cart.png' %}" alt="cart image">
            </a>
