--- a/commerce/templates/commerce/login.html
+++ b/commerce/templates/commerce/login.html
@@ -11,10 +11,10 @@
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            <input required class="form-control" type="text" name="name" placeholder="Name..">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input required class="form-control" type="password" name="password" placeholder="Password">
         </div>
         <input class="btn btn-primary" type="submit" value="Login">
     </form>
