--- a/commerce/templates/commerce/layout.html
+++ b/commerce/templates/commerce/layout.html
@@ -63,7 +63,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="{% static 'commerce/js/cart.js'%}?v=1"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'store' %}">Home</a>
+        <a class="navbar-brand" href="{% url 'store' category='home' %}">All</a>
+        <a class="navbar-brand" href="{% url 'store' category='True' %}">Laptops</a>
+        <a class="navbar-brand" href="{% url 'store' category='False' %}">Phones</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,7 +73,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'cart' %}">Cart <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'cart' %}">Got to Cart <span class="sr-only">(current)</span></a>
             </li>        
           </ul>
           <div class="form-inline my-2 my-lg-0">
